Modal scrollbar fix on windows (firefox, edge & IE)

--- a/source/sass/component/modal/_modal.scss
+++ b/source/sass/component/modal/_modal.scss
@@ -252,3 +252,20 @@
 .modal-backdrop-white .modal-content {
     border: none;
 }
+
+html[data-useragent*="Windows"][data-useragent*="Firefox"],
+html[data-useragent*="Windows"][data-useragent*="rv:11"],
+html[data-useragent*="Windows"][data-useragent*="MSIE"]
+{
+    .modal[class*='modal-backdrop-'] .backdrop,
+    .modal[class^=' modal-backdrop-'] .backdrop {
+        right: 17px !important;
+    }
+}
+
+html[data-useragent*="Windows"][data-useragent*="Edge"] {
+    .modal[class*='modal-backdrop-'] .backdrop,
+    .modal[class^=' modal-backdrop-'] .backdrop {
+        right: 12px !important;
+    }
+}
